--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,13 +6,13 @@ Authors@R: c(
               person("Kevin", "Tappe", email = "kevin.tappe@bwi.uni-stuttgart.de", role = c("aut", "cre")),
               person("Tobias", "Pohl", email = "TODO@example.com", role = c("aut"))
             )
-Description: TODO more here; RHS sollte vorkommen; Robustness check kann
+Description: TODO more here. RHS sollte vorkommen. Robustness check kann
     mehrere bedeutungen haben, eine davon die operationalisierung von Variablen e.g.
     firm size is often operationalized as one or more of the following: number of
-    employees, log(market capitalization), total assets
+    employees, log(market capitalization), total assets.
 Depends:
     R (>= 3.1.0)
-License: GPL2
+License: GPL (>=2)
 LazyData: true
 Suggests:
     broom,
